src/test/resources/frontendReference/invalid/syntaxErr/function/functionScopeDef.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:9 -- missing '=' at '('
Syntactic Error at 13:10 -- no viable alternative at input ')'
Syntactic Error at 13:12 -- mismatched input 'is' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', ';'}
Syntactic Error at 17:4 -- mismatched input 'int' expecting {'end', ';'}
Syntactic Error at 20:0 -- extraneous input 'end' expecting <EOF>
5 parser error(s) detected, no further compilation attempted.
